LandingPage about-me button removed, LandingPage ProfileCard alignment bug fix, Carousel controls on thumbnail removed

--- a/Desktop/portfolio-master/portfolio/src/components/carousel-controls/CarouselControls.css
+++ b/Desktop/portfolio-master/portfolio/src/components/carousel-controls/CarouselControls.css
@@ -5,6 +5,8 @@
 	width: 100%;
 	height: 25px;
 	margin-bottom: -18px;
+	padding-bottom: 2px;
+
 	background: grey;
 }
 
