--- a/Desktop/portfolio-master/portfolio/src/components/profile-card/profile-card.css
+++ b/Desktop/portfolio-master/portfolio/src/components/profile-card/profile-card.css
@@ -1,7 +1,7 @@
 .profile-card {
 	position: fixed;
 	background: rgba(255, 255, 255, 0.7);
-	top: 10px;
+	top: 30px;
 	right: 30px;
 	border: 3px solid white;
 	border-radius: 5px;
